--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,16 @@ import React, { useState, useEffect } from 'react';
 import { Accordion, AccordionSummary, AccordionDetails, Box, Typography, Button, Autocomplete, TextField } from '@mui/material';
 import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 
+/**
+ * ScopeDataFilters displays a collapsible filter box with 6 multi‑select fields arranged in 3×2 layout.
+ * It calls onFilterChange with the selected filters (as comma‑separated strings) when the user clicks "Apply Filters".
+ *
+ * Props:
+ * - onFilterChange: function(filters) – callback with the filter object.
+ * - filterOptions: object containing arrays for:
+ *      { subcategoryNames, bus, buOwners, subcatCustodians, inScopeOptions, profileTypes }
+ */
 const ScopeDataFilters = ({ onFilterChange, filterOptions = {} }) => {
-  // Options can be passed in or computed (here we use props for flexibility)
   const {
     subcategoryNames = [],
     bus = [],
@@ -14,7 +22,7 @@ const ScopeDataFilters = ({ onFilterChange, filterOptions = {} }) => {
     profileTypes = ['Provider', 'Consumer', 'Both', 'Inheritor']
   } = filterOptions;
 
-  // Local state for each filter
+  // Local state for each filter field.
   const [selectedSubcategories, setSelectedSubcategories] = useState([]);
   const [selectedBU, setSelectedBU] = useState([]);
   const [selectedBUOwner, setSelectedBUOwner] = useState([]);
@@ -22,8 +30,8 @@ const ScopeDataFilters = ({ onFilterChange, filterOptions = {} }) => {
   const [selectedInScope, setSelectedInScope] = useState([]);
   const [selectedProfileType, setSelectedProfileType] = useState([]);
 
-  // Clear selections when component mounts, if needed.
   useEffect(() => {
+    // Clear filters on mount.
     setSelectedSubcategories([]);
     setSelectedBU([]);
     setSelectedBUOwner([]);
@@ -33,7 +41,6 @@ const ScopeDataFilters = ({ onFilterChange, filterOptions = {} }) => {
   }, []);
 
   const applyFilters = () => {
-    // Build filter object. For now, we convert each array to a comma‑separated string.
     const filters = {
       SubcategoryName: selectedSubcategories.join(','),
       BU: selectedBU.join(','),
@@ -52,59 +59,65 @@ const ScopeDataFilters = ({ onFilterChange, filterOptions = {} }) => {
       </AccordionSummary>
       <AccordionDetails>
         <Box display="flex" flexWrap="wrap" gap={2}>
-          <Autocomplete
-            multiple
-            options={subcategoryNames}
-            value={selectedSubcategories}
-            onChange={(event, newValue) => setSelectedSubcategories(newValue)}
-            renderInput={(params) => <TextField {...params} label="Subcategory Name" variant="outlined" />}
-            sx={{ minWidth: 200 }}
-          />
-          <Autocomplete
-            multiple
-            options={bus}
-            value={selectedBU}
-            onChange={(event, newValue) => setSelectedBU(newValue)}
-            renderInput={(params) => <TextField {...params} label="BU" variant="outlined" />}
-            sx={{ minWidth: 200 }}
-          />
-          <Autocomplete
-            multiple
-            options={buOwners}
-            value={selectedBUOwner}
-            onChange={(event, newValue) => setSelectedBUOwner(newValue)}
-            renderInput={(params) => <TextField {...params} label="BU Owner" variant="outlined" />}
-            sx={{ minWidth: 200 }}
-          />
-          <Autocomplete
-            multiple
-            options={subcatCustodians}
-            value={selectedCustodian}
-            onChange={(event, newValue) => setSelectedCustodian(newValue)}
-            renderInput={(params) => <TextField {...params} label="Subcat Custodian" variant="outlined" />}
-            sx={{ minWidth: 200 }}
-          />
-          <Autocomplete
-            multiple
-            options={inScopeOptions}
-            value={selectedInScope}
-            onChange={(event, newValue) => setSelectedInScope(newValue)}
-            renderInput={(params) => <TextField {...params} label="In Scope" variant="outlined" />}
-            sx={{ minWidth: 200 }}
-          />
-          <Autocomplete
-            multiple
-            options={profileTypes}
-            value={selectedProfileType}
-            onChange={(event, newValue) => setSelectedProfileType(newValue)}
-            renderInput={(params) => <TextField {...params} label="Profile Type" variant="outlined" />}
-            sx={{ minWidth: 200 }}
-          />
+          {/* First row: Subcategory Name, BU, BU Owner */}
+          <Box sx={{ flexBasis: '33%' }}>
+            <Autocomplete
+              multiple
+              options={subcategoryNames}
+              value={selectedSubcategories}
+              onChange={(event, newValue) => setSelectedSubcategories(newValue)}
+              renderInput={(params) => <TextField {...params} label="Subcategory Name" variant="outlined" />}
+            />
+          </Box>
+          <Box sx={{ flexBasis: '33%' }}>
+            <Autocomplete
+              multiple
+              options={bus}
+              value={selectedBU}
+              onChange={(event, newValue) => setSelectedBU(newValue)}
+              renderInput={(params) => <TextField {...params} label="BU" variant="outlined" />}
+            />
+          </Box>
+          <Box sx={{ flexBasis: '33%' }}>
+            <Autocomplete
+              multiple
+              options={buOwners}
+              value={selectedBUOwner}
+              onChange={(event, newValue) => setSelectedBUOwner(newValue)}
+              renderInput={(params) => <TextField {...params} label="BU Owner" variant="outlined" />}
+            />
+          </Box>
+          {/* Second row: Subcat Custodian, In Scope, Profile Type */}
+          <Box sx={{ flexBasis: '33%' }}>
+            <Autocomplete
+              multiple
+              options={subcatCustodians}
+              value={selectedCustodian}
+              onChange={(event, newValue) => setSelectedCustodian(newValue)}
+              renderInput={(params) => <TextField {...params} label="Subcat Custodian" variant="outlined" />}
+            />
+          </Box>
+          <Box sx={{ flexBasis: '33%' }}>
+            <Autocomplete
+              multiple
+              options={inScopeOptions}
+              value={selectedInScope}
+              onChange={(event, newValue) => setSelectedInScope(newValue)}
+              renderInput={(params) => <TextField {...params} label="In Scope" variant="outlined" />}
+            />
+          </Box>
+          <Box sx={{ flexBasis: '33%' }}>
+            <Autocomplete
+              multiple
+              options={profileTypes}
+              value={selectedProfileType}
+              onChange={(event, newValue) => setSelectedProfileType(newValue)}
+              renderInput={(params) => <TextField {...params} label="Profile Type" variant="outlined" />}
+            />
+          </Box>
         </Box>
         <Box mt={2}>
-          <Button variant="contained" onClick={applyFilters}>
-            Apply Filters
-          </Button>
+          <Button variant="contained" onClick={applyFilters}>Apply Filters</Button>
         </Box>
       </AccordionDetails>
     </Accordion>
@@ -112,6 +125,7 @@ const ScopeDataFilters = ({ onFilterChange, filterOptions = {} }) => {
 };
 
 export default ScopeDataFilters;
+
 
 
 --
